[gd_scene load_steps=78 format=3 uid="uid://c8vibbfvcj650"]

[ext_resource type="Script" path="res://scripts/actors/enemy.gd" id="1_pe0uo"]
[ext_resource type="Texture2D" uid="uid://cnbxo0pvf5kvf" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/ATTACK1.png" id="2_ir6an"]
[ext_resource type="Texture2D" uid="uid://bbl8qfob6nfcm" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/DEATH.png" id="3_48kxg"]
[ext_resource type="Texture2D" uid="uid://cy3wyy5lkrw5l" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/ATTACK2.png" id="4_0jkc7"]
[ext_resource type="Texture2D" uid="uid://cxjdtm2rry8t3" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/HURT.png" id="4_p6svp"]
[ext_resource type="Texture2D" uid="uid://doxmutcetjbwe" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/IDLE.png" id="5_i7w8r"]
[ext_resource type="Texture2D" uid="uid://c3f6qhg3leo3n" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/IDLE HUMAN.png" id="6_bg08k"]
[ext_resource type="Texture2D" uid="uid://df0ced5d4xjb0" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/RUN.png" id="7_56kvv"]
[ext_resource type="PackedScene" uid="uid://dngb72m6byj2m" path="res://prefabs/hurtbox.tscn" id="7_fvbrv"]
[ext_resource type="Script" path="res://scripts/states/State_Machine.gd" id="8_ygvxb"]
[ext_resource type="Texture2D" uid="uid://chaulwo4y85m" path="res://assets/Werewolf 2D Pixel Art/Sprites/without_outline/TRANSFORMATION.png" id="9_bnhn1"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/EnemyDie.gd" id="12_e1sef"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/WerewolfStates/EnemyIdle.gd" id="12_ymkjh"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/EnemyHurt.gd" id="13_0h17a"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/WerewolfStates/EnemyFollowPlayer.gd" id="13_2tw51"]
[ext_resource type="Script" path="res://scripts/states/EnemyStates/WerewolfStates/EnemyAttack.gd" id="13_kvfj8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xx8lu"]
atlas = ExtResource("2_ir6an")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvb2v"]
atlas = ExtResource("2_ir6an")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_60l2w"]
atlas = ExtResource("2_ir6an")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_chgf2"]
atlas = ExtResource("2_ir6an")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sc68"]
atlas = ExtResource("2_ir6an")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3y3c"]
atlas = ExtResource("2_ir6an")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4i3x"]
atlas = ExtResource("2_ir6an")
region = Rect2(948, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3ius"]
atlas = ExtResource("3_48kxg")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbroj"]
atlas = ExtResource("3_48kxg")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_06hv6"]
atlas = ExtResource("3_48kxg")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfgco"]
atlas = ExtResource("3_48kxg")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5uir"]
atlas = ExtResource("3_48kxg")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_43ehe"]
atlas = ExtResource("3_48kxg")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8nd3"]
atlas = ExtResource("3_48kxg")
region = Rect2(948, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj7gc"]
atlas = ExtResource("3_48kxg")
region = Rect2(1106, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j0a4"]
atlas = ExtResource("3_48kxg")
region = Rect2(1264, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_peoar"]
atlas = ExtResource("3_48kxg")
region = Rect2(1422, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_1uq7x"]
atlas = ExtResource("4_0jkc7")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbhdw"]
atlas = ExtResource("4_0jkc7")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0mqi"]
atlas = ExtResource("4_0jkc7")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_88iym"]
atlas = ExtResource("4_0jkc7")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoejg"]
atlas = ExtResource("4_0jkc7")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjh4h"]
atlas = ExtResource("4_0jkc7")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4iq1"]
atlas = ExtResource("4_p6svp")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa18u"]
atlas = ExtResource("4_p6svp")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncy1w"]
atlas = ExtResource("4_p6svp")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuts8"]
atlas = ExtResource("4_p6svp")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hgcv"]
atlas = ExtResource("4_p6svp")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbh5r"]
atlas = ExtResource("4_p6svp")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_06lm6"]
atlas = ExtResource("5_i7w8r")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx2kp"]
atlas = ExtResource("5_i7w8r")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehcxl"]
atlas = ExtResource("5_i7w8r")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1yxo"]
atlas = ExtResource("5_i7w8r")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgbtf"]
atlas = ExtResource("5_i7w8r")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1vnb"]
atlas = ExtResource("5_i7w8r")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8t8l"]
atlas = ExtResource("6_bg08k")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7mf1"]
atlas = ExtResource("6_bg08k")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t80v"]
atlas = ExtResource("6_bg08k")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_41qq5"]
atlas = ExtResource("6_bg08k")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq1jf"]
atlas = ExtResource("6_bg08k")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4qoj"]
atlas = ExtResource("6_bg08k")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpavr"]
atlas = ExtResource("7_56kvv")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_avntc"]
atlas = ExtResource("7_56kvv")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_nukx4"]
atlas = ExtResource("7_56kvv")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_csdrf"]
atlas = ExtResource("7_56kvv")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8vc3"]
atlas = ExtResource("7_56kvv")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_buong"]
atlas = ExtResource("7_56kvv")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_1djlt"]
atlas = ExtResource("9_bnhn1")
region = Rect2(0, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq1j2"]
atlas = ExtResource("9_bnhn1")
region = Rect2(158, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0q46"]
atlas = ExtResource("9_bnhn1")
region = Rect2(316, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_sspn6"]
atlas = ExtResource("9_bnhn1")
region = Rect2(474, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsmxp"]
atlas = ExtResource("9_bnhn1")
region = Rect2(632, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmyke"]
atlas = ExtResource("9_bnhn1")
region = Rect2(790, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj8lh"]
atlas = ExtResource("9_bnhn1")
region = Rect2(948, 0, 158, 125)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxfeu"]
atlas = ExtResource("9_bnhn1")
region = Rect2(1106, 0, 158, 125)

[sub_resource type="SpriteFrames" id="SpriteFrames_mytks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx8lu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvb2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60l2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chgf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8sc68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3y3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4i3x")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3ius")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbroj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06hv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfgco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5uir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43ehe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8nd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj7gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j0a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peoar")
}],
"loop": false,
"name": &"die",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uq7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbhdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0mqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88iym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoejg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjh4h")
}],
"loop": false,
"name": &"heavy_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4iq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa18u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncy1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuts8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hgcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbh5r")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06lm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx2kp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehcxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1yxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgbtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1vnb")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8t8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7mf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t80v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41qq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq1jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4qoj")
}],
"loop": true,
"name": &"idle_human",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpavr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avntc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nukx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csdrf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8vc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buong")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1djlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq1j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0q46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sspn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsmxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmyke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj8lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxfeu")
}],
"loop": false,
"name": &"transformation",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_ry3w6"]
resource_name = "attack"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("anim:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("anim:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 4, 5, 6, 7, 8, 9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FSM/attack/enemy_hitbox/collision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yahmo"]
_data = {
"attack": SubResource("Animation_ry3w6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvavp"]
size = Vector2(12, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8ueh"]
size = Vector2(16, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_egck1"]
size = Vector2(38, 17)

[node name="enemy" type="CharacterBody2D" groups=["enemies"]]
texture_filter = 1
collision_layer = 4
collision_mask = 14
script = ExtResource("1_pe0uo")

[node name="anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -10)
sprite_frames = SubResource("SpriteFrames_mytks")
animation = &"attack"

[node name="anim_combat" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yahmo")
}

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_kvavp")

[node name="hurtbox" parent="." node_paths=PackedStringArray("enemy_anim") instance=ExtResource("7_fvbrv")]
collision_layer = 32
collision_mask = 8
enemy_anim = NodePath("../anim")

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_a8ueh")
debug_color = Color(0.984314, 0, 0.356863, 0.419608)

[node name="FSM" type="Node2D" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_ygvxb")
initial_state = NodePath("idle")

[node name="idle" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("12_ymkjh")
enemy = NodePath("../..")

[node name="follow_player" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("13_2tw51")
enemy = NodePath("../..")

[node name="attack" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("13_kvfj8")
enemy = NodePath("../..")

[node name="enemy_hitbox" type="Area2D" parent="FSM/attack"]
collision_layer = 4

[node name="collision" type="CollisionShape2D" parent="FSM/attack/enemy_hitbox"]
position = Vector2(27, -8.5)
shape = SubResource("RectangleShape2D_egck1")
disabled = true
debug_color = Color(0.996078, 0.0588235, 0, 0.419608)

[node name="die" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("12_e1sef")
enemy = NodePath("../..")

[node name="hurt" type="Node2D" parent="FSM" node_paths=PackedStringArray("enemy")]
script = ExtResource("13_0h17a")
enemy = NodePath("../..")

[node name="Label" type="Label" parent="."]
offset_left = -19.0
offset_top = -49.0
offset_right = 21.0
offset_bottom = -26.0
theme_override_font_sizes/font_size = 12

[connection signal="area_entered" from="hurtbox" to="FSM/follow_player" method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="FSM/attack" method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="FSM/attack/enemy_hitbox" to="FSM/attack" method="_on_enemy_hitbox_area_entered"]
